anypoint-connector-devkit/v/3.6/anypoint-connector-development.adoc
= Anypoint Connector Development
:keywords: devkit, connector, development, api, authentication, project

This document quickly walks you through the decisions to make and the steps to take to get an Anypoint Connector development project started, get the connector working, and enhance it with the functionality you need.

== Prerequisites

This document assumes you are familiar with the link:/anypoint-connector-devkit/v/3.6/_fixed[Anypoint Connector DevKit].

== Outline of the Connector Development Process

When you develop a connector using DevKit, your use cases drive a series of decisions about authentication, connectivity, and how to call operations on your target and pass data to the external application or other resource. These choices, in turn, drive what you develop. Where a choice presents itself, this document provides information to help you make a decision and provides links to the get more details.

== Step 1 - Setting Up Your Development Environment

. Install http://www.oracle.com/technetwork/java/javase/downloads/java-archive-downloads-javase7-521261.html[JDK 7].
. Install http://maven.apache.org/download.cgi[Maven].
. Install http://www.mulesoft.com/platform/mule-studio[Anypoint Studio].
. Install the http://www.mulesoft.org/documentation/display/current/Setting+Up+Your+Dev+Environment#SettingUpYourDevEnvironment-DevKitPlugin[Anypoint DevKit Plugin].

Refer to <<Step 1 - Setting Up Your Development Environment>> for detailed instructions.

== Step 2 - Setting Up Your API Access

. Prepare a test environment for your connector. Details vary greatly based on the target system.
. *SaaS* – For some SaaS applications, the sandbox may be a separate account from the production account, or may answer at a different endpoint.
. *On-premise* – For some on-premise systems or Web services, you may simply have a separate standalone installation with dummy data instead of production data.  +
. Acquire any existing documentation for your target system, such as API documentation.

Refer to link:/anypoint-connector-devkit/v/3.6/setting-up-api-access[Setting Up API Access] for detailed instructions.

== Step 3 - Creating an Anypoint Connector Project

. Follow the process in link:/anypoint-connector-devkit/v/3.6/creating-an-anypoint-connector-project[Creating an Anypoint Connector Project] to start a connector development project in your development environment. 
. Add any required Java libraries for your target system, such as client libraries or class libraries provided for the target system. 

When finished, you should have a scaffold project, containing a Java class with the most basic functionality for a connector in place. 

== Step 4 - Authentication

If your API requires authentication, understand the authentication methods your API uses and select those that your connector supports. Based on your use case, select an authentication method from the table below. For more details, read link:/anypoint-connector-devkit/v/3.6/authentication[Authentication] which introduces all of the supported methods.

[width="100%",cols="50%,50%",options="header"]
|===
|Authentication Method |Notes
|link:/anypoint-connector-devkit/v/3.6/connection-management[Connection Management] |The simplest mode of authentication used for any non-OAuth protocols such as SAML, Kerberos, LDAP, NTLM, or to create a custom connection.
|link:/anypoint-connector-devkit/v/3.6/oauth-v1[OAuth V1] |Popular among RESTful Web services and cloud applications.
|link:/anypoint-connector-devkit/v/3.6/oauth-v2[OAuth V2] |Popular among RESTful Web services and cloud applications.
|===

== Step 5 - Defining Attributes, Operations, and Data Model

Most of the Java code you write for your connector relates to how you call your API inside the connector's operations and how the connector must pass data between those operations and Mule. This is the area that varies most among connectors, based on your API.

Use the table below to select an approach for building your connector based on the style of your API:

[width="100%",cols="50%,50%",options="header"]
|===
|API Example |Notes
|link:/anypoint-connector-devkit/v/3.6/creating-a-connector-using-a-java-sdk[Java Client Library] |If an official or well-known third party library is available, this is generally the simplest connector style to implement, and is recommended. Most client libraries are actually wrappers for SOAP or RESTful APIs.
|link:/anypoint-connector-devkit/v/3.6/creating-a-connector-for-a-soap-service-via-cxf-client[SOAP API] |The defacto standard library for building and consuming SOAP Web services, this style handles client logic and Java object mapping to XML. In Anypoint Studio, the WSDL you indicate builds a connector automatically.
|link:/anypoint-connector-devkit/v/3.6/creating-a-connector-for-a-restful-api-using-restcall-annotations[RESTful API] |Anypoint DevKit provides a built-in client for RESTful APIs. Useful for cleanly designed RESTful APIs.
|===

For more details, refer to link:/anypoint-connector-devkit/v/3.6/defining-attributes-operations-and-data-model[Defining Attributes Operations and Data Model].

== Step 6 - Building Unit and Functional Tests

A production-ready connector must have a suite of unit and functional tests; connectors use the standard JUnit framework. In practice, build your unit tests as you implement your connector's operations. Most successful connector implementations use a test-driven approach to development.

. Develop one or more Mule flows that use the connector.
. Create an instance of http://www.mulesoft.org/documentation/display/current/Functional+Testing#FunctionalTesting-FunctionalTestCase[FunctionalTestCase] to run the test. For DevKit testing, run Mule inside a JUnit test case. Each test case you build extends the class http://www.mulesoft.org/documentation/display/current/Functional+Testing#FunctionalTesting-FunctionalTestCase[FunctionalTestCase] (a subclass of JUnit). The test case manages the lifecycle of a Mule runtime instance and calls flows to carry out the test. 
. Programmatically examine the results of each test case to determine success or failure.

Before releasing the connector to the world, run a thorough test suite that covers all operations and exercises each major code path. The Maven-generated project contains one sample test case under the `src/test/java` directory to get you started. 

Refer to link:/anypoint-connector-devkit/v/3.6/developing-devkit-connector-tests[Developing DevKit Connector Tests] for details on how to implement connector test cases using JUnit. 

== Step 7 - Documenting Your Connector

A full-featured connector should have documentation. DevKit enables the creation of complete reference documentation including code samples.

* Each time you add an operation to a connector, DevKit adds sample XML code snippets in comments in the source code. These snippets appear in the auto-generated connector documentation.
* Review the auto-generated documentation to determine if you want to expand upon it, offering more than information than the simple documentation of individual operations.

Refer to link:/anypoint-connector-devkit/v/3.6/connector-reference-documentation[Connector Reference Documentation] for further details. 

== Step 8 - Packaging and Releasing Your Connector

When your connector is ready for release to a broad audience, take the following additional steps to ensure user success:

. Before releasing a connector, ensure your license agreement is in place. 
. If your connector is intended only for internal use, you can share it as an Eclipse update site.
. To share your connector with the community, see link:https://www.mulesoft.com/exchange#!/?types=connector&filters=Community&sortBy=name[Anypoint Exchange]. 

Refer to link:/anypoint-connector-devkit/v/3.6/packaging-your-connector-for-release[Packaging Your Connector for Release] for full details.

== See Also

See link:/anypoint-connector-devkit/v/3.6/setting-up-your-dev-environment[Setting Up Your Development Environment].
